// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SwitchButton SwitchButton Default State 1`] = `
<DocumentFragment>
  <label
    class="sc-eqUAAy kFMUIf"
    title="switch-button"
  >
    <input
      class="sc-gEvEer ezKwCG"
      type="checkbox"
    />
    <span
      class="sc-aXZVg bmBdqL"
    />
  </label>
</DocumentFragment>
`;

exports[`SwitchButton SwitchButton is Active 1`] = `
<DocumentFragment>
  <label
    class="sc-eqUAAy kFMUIf"
    title="switch-button"
  >
    <input
      checked=""
      class="sc-gEvEer ezKwCG"
      type="checkbox"
    />
    <span
      class="sc-aXZVg bmBdqL"
    />
  </label>
</DocumentFragment>
`;

exports[`SwitchButton SwitchButton is Disable & Active 1`] = `
<DocumentFragment>
  <label
    class="sc-eqUAAy kFMUIf"
    title="switch-button"
  >
    <input
      checked=""
      class="sc-gEvEer ezKwCG"
      disabled=""
      type="checkbox"
    />
    <span
      class="sc-aXZVg bmBdqL"
    />
  </label>
</DocumentFragment>
`;

exports[`SwitchButton SwitchButton is Disable 1`] = `
<DocumentFragment>
  <label
    class="sc-eqUAAy kFMUIf"
    title="switch-button"
  >
    <input
      class="sc-gEvEer ezKwCG"
      disabled=""
      type="checkbox"
    />
    <span
      class="sc-aXZVg bmBdqL"
    />
  </label>
</DocumentFragment>
`;
